feat(console): reworked GPUProfiler and fixed some more issues with the headers